crates/forgejo-core/src/error/snapshots/forgejo_core__error__render__tests__snapshot_insufficient_scope_with_unknown_scopes.snap
---
source: crates/forgejo-core/src/error/render.rs
expression: "snap(ErrorKind::InsufficientScope\n{\n    host: \"git.example.org\".into(), needed: vec![\"write:issue\".into()], have:\n    None, settings_url:\n    \"https://git.example.org/user/settings/applications\".into(),\n}, ctx())"
---
error: token is missing a required scope (HTTP 403)

  request:    POST /api/v1/repos/perf3ct/fcli/issues
  needs:      write:issue
  token has:  unknown (Forgejo does not report a token's scopes)
  token from: the OS keyring, entry fcli:git.example.org

what to do:
  create a token with the required scopes; existing token scopes cannot be
  changed.
  1. create a token with write:issue at
     https://git.example.org/user/settings/applications
  2. fcli auth login --host git.example.org
  note: Forgejo scopes use read:<area> and write:<area>.
