crates/forgejo-core/src/error/snapshots/forgejo_core__error__render__tests__snapshot_path_not_found_is_local.snap
---
source: crates/forgejo-core/src/error/render.rs
expression: "snap(ErrorKind::PathNotFound\n{\n    path: PathBuf::from(\"dist/fjo-v1.2.3-linux.tar.gz\"), what:\n    \"release asset\",\n}, RequestCtx::default())"
---
error: there is no release asset at dist/fjo-v1.2.3-linux.tar.gz

  path:       dist/fjo-v1.2.3-linux.tar.gz
  wanted for: release asset

what to do:
  check the path to the release asset.
  1. ls -l dist/fjo-v1.2.3-linux.tar.gz
  2. relative paths start at the current directory, not the repository root
  note: check wildcard matches; some shells pass an unmatched pattern as a
        literal filename.
