crates/forgejo-core/src/error/snapshots/forgejo_core__error__render__tests__snapshot_repo_not_found_is_honestly_ambiguous.snap
---
source: crates/forgejo-core/src/error/render.rs
expression: "snap(ErrorKind::RepoNotFound\n{\n    slug: \"perf3ct/fcli\".into(), host: \"git.example.org\".into(), login:\n    Some(\"perf3ct\".into()), probed: true, server_message: None,\n}, c)"
---
error: could not find the repository perf3ct/fcli on git.example.org (HTTP 404)

  request:      GET /api/v1/repos/perf3ct/fcli/pulls/4212
  repository:   perf3ct/fcli
  host:         git.example.org
  logged in as: perf3ct
  token from:   the OS keyring, entry fcli:git.example.org

what to do:
  check these possible causes:
  1. check the owner and repository name; the repository may have been
     renamed, transferred, or deleted
  2. for a private repository, check account access and read:repository.
     if the scope is missing, create a new token at
     https://git.example.org/user/settings/applications
  3. check the configured server: fcli auth status
  check repository access: fcli api repos/perf3ct/fcli
